<resources>
    <string name="app_name">Prodoct Explorer XML</string>
    <string name="product_list">Product List</string>
    <string name="product_title">Product Title</string>
    <string name="price">₦ Price</string>
    <string name="product_details">Product Details</string>
    <string name="category">Category</string>
    <string name="product_description">Product Description</string>
    <string name="product_image">Product Image</string>
    <string name="todo">TODO</string>
</resources>